// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-pagination #render should render as expected (1) 1`] = `
<gux-pagination current-page="1" total-items="1000" items-per-page="25" layout="advanced" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
                  1
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 2">
                  2
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 3">
                  3
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 4">
                  4
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 5">
                  5
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="40">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 40">
                  40
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (2) 1`] = `
<gux-pagination current-page="1" total-items="1000" items-per-page="25" layout="advanced" disabled="true">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button disabled="" class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
                  1
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" aria-label="Page 2">
                  2
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" aria-label="Page 3">
                  3
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" aria-label="Page 4">
                  4
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" aria-label="Page 5">
                  5
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button disabled="" totalpages="40">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button disabled="" aria-label="Page 40">
                  40
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (3) 1`] = `
<gux-pagination current-page="1" total-items="1000" items-per-page="50" layout="advanced" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="1" items-per-page="50">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 50
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="20">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
                  1
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 2">
                  2
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 3">
                  3
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 4">
                  4
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 5">
                  5
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="20">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 20">
                  20
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (4) 1`] = `
<gux-pagination current-page="1" total-items="1000" items-per-page="75" layout="advanced" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="1" items-per-page="75">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 75
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="14">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
                  1
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 2">
                  2
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 3">
                  3
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 4">
                  4
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 5">
                  5
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="14">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 14">
                  14
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (5) 1`] = `
<gux-pagination current-page="1" total-items="1000" items-per-page="100" layout="advanced" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="1" items-per-page="100">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 100
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="10">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
                  1
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 2">
                  2
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 3">
                  3
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 4">
                  4
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 5">
                  5
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="10">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 10">
                  10
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (6) 1`] = `
<gux-pagination current-page="1" total-items="1000" items-per-page="25" layout="advanced" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
                  1
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 2">
                  2
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 3">
                  3
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 4">
                  4
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 5">
                  5
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="40">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 40">
                  40
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (7) 1`] = `
<gux-pagination current-page="10" total-items="1000" items-per-page="25" layout="advanced" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="10" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              226 - 250
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="40">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button aria-label="Page 1">
                  1
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="40">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 9">
                  9
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 10 selected">
                  10
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 11">
                  11
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="40">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 40">
                  40
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (8) 1`] = `
<gux-pagination current-page="10" total-items="1000" items-per-page="50" layout="advanced" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="10" items-per-page="50">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              451 - 500
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="20">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button aria-label="Page 1">
                  1
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="20">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 9">
                  9
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 10 selected">
                  10
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 11">
                  11
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="20">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 20">
                  20
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (9) 1`] = `
<gux-pagination current-page="10" total-items="1000" items-per-page="75" layout="advanced" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="10" items-per-page="75">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              676 - 750
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="14">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button aria-label="Page 1">
                  1
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="14">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 9">
                  9
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 10 selected">
                  10
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 11">
                  11
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="14">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 14">
                  14
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (10) 1`] = `
<gux-pagination current-page="10" total-items="1000" items-per-page="100" layout="advanced" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="10" items-per-page="100">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              901 - 1,000
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="10" total-pages="10">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button aria-label="Page 1">
                  1
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="10">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 6">
                  6
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 7">
                  7
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 8">
                  8
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 9">
                  9
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 10 selected">
                  10
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (11) 1`] = `
<gux-pagination current-page="1" total-items="1000" items-per-page="25" layout="simple" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
                  1
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 2">
                  2
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 3">
                  3
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 4">
                  4
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 5">
                  5
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="40">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 40">
                  40
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (12) 1`] = `
<gux-pagination current-page="1" total-items="1000" items-per-page="25" layout="simple" disabled="true">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button disabled="" class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
                  1
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" aria-label="Page 2">
                  2
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" aria-label="Page 3">
                  3
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" aria-label="Page 4">
                  4
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button disabled="" aria-label="Page 5">
                  5
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button disabled="" totalpages="40">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button disabled="" aria-label="Page 40">
                  40
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (13) 1`] = `
<gux-pagination current-page="-3" total-items="1000" items-per-page="25" layout="advanced" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="1000" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              1 - 25
            </span>
            <span class="gux-pagination-item-counts-total">
              <span>
                of 1,000
              </span>
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="40">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
                  1
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 2">
                  2
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 3">
                  3
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 4">
                  4
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 5">
                  5
                </button>
              </gux-button-slot>
              <gux-pagination-ellipsis-button totalpages="40">
              </gux-pagination-ellipsis-button>
              <gux-button-slot accent="ghost">
                <button aria-label="Page 40">
                  40
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render as expected (14) 1`] = `
<gux-pagination current-page="-3" total-items="0" items-per-page="25" layout="advanced" disabled="false">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="0" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              0 - 0
            </span>
            <span class="gux-pagination-item-counts-total">
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="1">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
                  1
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;

exports[`gux-pagination #render should render current page as 1 when total items is 0 1`] = `
<gux-pagination current-page="1" total-items="0" items-per-page="25" layout="full">
  <template shadowrootmode="open">
    <div class="gux-pagination-container">
      <div class="gux-pagination-info">
        <gux-pagination-item-counts total-items="0" current-page="1" items-per-page="25">
          <div class="gux-pagination-item-counts-container">
            <span class="gux-pagination-item-counts-range">
              0 - 0
            </span>
            <span class="gux-pagination-item-counts-total">
            </span>
          </div>
        </gux-pagination-item-counts>
      </div>
      <div class="gux-pagination-spacer">
      </div>
      <div class="gux-pagination-change">
        <gux-pagination-buttons current-page="1" total-pages="1">
          <div class="gux-pagination-buttons-container gux-advanced">
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="First page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-left-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Previous page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-left-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-list-container">
              <gux-button-slot accent="ghost">
                <button class="gux-pagination-buttons-list-current" aria-label="Page 1 selected">
                  1
                </button>
              </gux-button-slot>
            </div>
            <div class="gux-pagination-buttons-group">
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Next page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="custom/chevron-right-small-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
              <gux-button-slot accent="ghost" icon-only="">
                <button title="Last page" disabled="">
                  <gux-icon size="small" decorative="" icon-name="fa/chevrons-right-regular">
                  </gux-icon>
                </button>
              </gux-button-slot>
            </div>
          </div>
        </gux-pagination-buttons>
      </div>
    </div>
  </template>
</gux-pagination>
`;
